public/css/style.css
/* ... */
@media screen and (max-width: 440px) {
#index-page {
   
    background: url(../imgs/creepy-hallway.webp) no-repeat;
    background-size: cover;
    background-position: 40% ;
    height: 100vh;
    }
    #main-img {
      height: 13vh;
      width: 19%;
    }

    #tagline {
      font-size: 16px;
      
    }

     #post-page {

  background-size:cover;
  background-position: 50% 30%;  
  opacity: .9;
}

    .mobile-feed {
      padding-right: 20px;
    }

    .add-post {
      border-bottom: 3px solid #00bc8c;
      padding-bottom: 4px;
      margin-bottom: 27px;
      
      
    }

    .post-section {
      border-radius: 6px;
    }

  

    #scrollProfile {
      margin-top: 40px;
      border-radius: 6px;
    }

    

    .btn-primary {
      width: 60%;
    }

    .btn-secondary {
      margin-left: 4px;
    }

    .custom-pad{
      margin-left: 30px;
    }

    .google {
      width: 100%;
      font-size: 13px;
    }

    .wip {
      font-size: 12px;
      width: 100%;
    }

    .profile-btn {
      margin-bottom: 35px;
      
    }

    .fa-eye, .fa-eye-slash {
    left: 188px;
    margin-top: 10px;
    }

     .login-box {
      width: 190%;
     }

     .mobile-fit {
      margin-right: 90px;
     }

    .signup-form {
      width: 40rem;
      padding-right: 200px;
    }

    .share-feed {
      padding-top: 50px;
    }

    .err-sizing {
      width: 100%;
    }

    .alert-mobile {
      width: 150%;
      margin-right: 150px;
    }

    .caption-update {
      width: 100%;
    }


    label {
      font-size: 21px;
    }
    input[type="range"] {
      height: 16px;

  
  }

  
    audio {
      width: 95%;
    }
    

    #logo {
      width: 40%;
     
    }

    #your-sfx {
      padding-top: 1em;
    }

    #shared {
    margin-bottom: 30px;
    
  }

  #comment {
    width: 80%;
  }

    .box-bg, .desc-box {
      padding-left: 20px;
      margin-left: 10px;
      margin-right: 10px;
      margin-bottom: 20px;
      width: 96%;
    }

    .comment-even, .comment-odd {
     border-radius: 10px;
    }

    .fa-trash {
      width: 60%;
      padding-right: 20px;
     
      
    }

    .fa-heart {
      padding-left: 30px;
      font-size: larger;
      
    }

    .fa-pen {
      margin: auto 0;
      padding-right:17px;
      width: 70%;
    }

    .fa-heart::before {
      position: relative;
      right: 19px;
      
    }

    .add-pad {
      padding-right: 5px;
    }
    
    .delete-profile {
      display: block;
      font-size: .8em;
     margin: 0 0 0 90px;
    }

   
   

    footer {
      display: block;
      margin: 0 0 0 60px;
      padding: 10px 0 ;
      font-size: .6em;
    }
}
  

